style(header): apply top:0 and z-index value 1 to ensure the nav-bar stays on top and appears above other content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,8 @@ h2 {
   height: 4.375rem;
   margin: 0;
   background-color: #ffffff;
-  /* top: 0; */
+  top: 0;
+  z-index: 1;
   border-bottom: 0.0625rem solid #DFDFDF;
 }
 
